users/login/artifacts/kubernetes/07_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users
    module: login
    project: ship-krew
  name: login
  namespace: ship-krew-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: users
    module: login
    project: ship-krew
  sessionAffinity: None
  type: ClusterIP
