users/login/artifacts/kubernetes/08_ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  # TODO: in future this may be splitted in multiple files
  name: login
  namespace: ship-krew-backend
spec:
  entryPoints:
  # TODO: should be secure
  - web
  routes:
  - kind: Rule
    match: "Host(`cacca.com`) && Path(`/login`, `/signup`)"
    priority: 10
    services:
    - kind: Service
      name: login
      namespace: ship-krew-backend
      passHostHeader: true
      port: 80
      sticky:
        cookie:
          httpOnly: true
          name: ingr
          # TODO: enable these
          # secure: true
          # sameSite: none
